--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
     environment:
       - DB_DSN=${DB_DSN:-tasked:tasked@tcp(db:3306)/tasked?charset=utf8mb4&parseTime=True&loc=Local}
       - JWT_SECRET=${JWT_SECRET:-secret}
+    depends_on:
+      - db
     volumes:
       - ./:/app
   db:
